crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__error.maybe-mutable-ref-not-preserved.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/error.maybe-mutable-ref-not-preserved.ts
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Refs: Cannot access refs during render", labels: [LabeledSpan { label: Some("Passing a ref to a function may read its value during render"), span: Span { start: 213, end: 214 }, primary: false }], help: Some("React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
